--- a/readme.org
+++ b/readme.org
@@ -489,118 +489,176 @@
 #+end_src
 
 *** Dashboard
+[[https://github.com/nasyxx/emacs.d/blob/master/%E8%94%93%E8%89%B8/%E5%BA%AD%E5%B0%9E/%E7%AF%87.org]]
     #+begin_src elisp
-      (straight-use-package 'dashboard)
-
-      (leaf page-break-lines
-	:hook
-	(after-init-hook . global-page-break-lines-mode)
-	(nasy/font-change-hook
-	 . (lambda ()
-	     (progn
-	       (nasy/change-char-width page-break-lines-char 2)
-	       (nasy/set-symbol ?⊸ 18 nil))))
-	:custom
-	(page-break-lines-char . ?⊸))
-
       (leaf dashboard
-	:commands dashboard-setup-startup-hook
-	:preface
-	(defun nasy/wfw1 (&rest _)
-	  "Widget forward 1."
-	  (interactive)
-	  (widget-forward 1))
-	(defun nasy/fw2 (&rest _)
-	  "Forward 2 chars."
-	  (interactive "p")
-	  (forward-char 2))
-	(defun nasy/-recentf (&rest _)
-	  (interactive)
-	  (counsel-recentf))
-	(defun nasy/-bookmarks (&rest _)
-	  (interactive)
-	  (bookmark-jump))
-	(defun nasy/-projects (&rest _)
-	  (interactive)
-	  (counsel-projectile-switch-project))
-	(defun nasy/-dashboard-items (list-size)
-	  (insert "\n")
-	  (insert "🌓 ")
-	  (widget-create 'item
-			 :tag "Recent Files (r)"
-			 :action #'nasy/-recentf
-			 :mouse-face 'highlight
-			 :button-face 'dashboard-heading
-			 :button-prefix ""
-			 :button-suffix ""
-			 :format "%[%t%]")
-	  (insert "\n\n")
-	  (insert "📚")
-	  (insert " ")
-	  (widget-create 'item
-			 :tag "Bookmarks (b)"
-			 :action #'nasy/-bookmarks
-			 :mouse-face 'highlight
-			 :button-face 'dashboard-heading
-			 :button-prefix ""
-			 :button-suffix ""
-			 :format "%[%t%]")
-	  (insert "\n\n")
-	  (insert "🚀 ")
-	  (widget-create 'item
-			 :tag "Projects (p)"
-			 :action #'nasy/-projects
-			 :mouse-face 'highlight
-			 :button-face 'dashboard-heading
-			 :button-prefix ""
-			 :button-suffix ""
-			 :format "%[%t%]")
-	  (insert "\n"))
-	:bind
-	("<f5>" . dashboard-refresh-buffer)
-	(:dashboard-mode-map
-	 ("r"              . counsel-recentf)
-	 ("p"              . counsel-projectile-switch-project)
-	 ("b"              . counsel-bookmark)
-	 ("g"              . dashboard-refresh-buffer))
-	:hook ((dashboard-mode-hook . (lambda () (setq tab-width 1)))	 
-	       (after-init-hook     . dashboard-setup-startup-hook))
-	:custom
-	(dashboard-org-agenda-categories . '("Calendar" "Tasks" "Appointments"))
-	`(dashboard-startup-banner       . ,(expand-file-name "n_icon.png" user-emacs-directory))
-	(dashboard-items . '((n-items . t)))
-	(dashboard-item-generators . '((n-items   . nasy/-dashboard-items)))
-	((dashboard-center-content
-	  dashboard-show-shortcuts
-	  dashboard-set-heading-icons
-	  dashboard-set-file-icons
-	  dashboard-set-init-info
-	  show-week-agenda-p
-	  dashboard-set-navigator) . t)
-	:config
-	:init
-	(after-x 'all-the-icons
-	  (setq dashboard-navigator-buttons
-		`(;; line1
-		  ((,(all-the-icons-octicon "mark-github" :height 1.1 :v-adjust 0.0)
-		    "Source"
-		    "Source Page"
-		    (lambda (&rest _) (browse-url "https://github.com/keke-cute/.emacs.d")))
-		   (,(all-the-icons-octicon "gear" :height 1.1 :v-adjust 0.0)
-		    "Config"
-		    "Config File"
-		    (lambda (&rest _)
-		      (let ((upath (expand-file-name "readme.org" user-emacs-directory))
-			    (epath (expand-file-name "init.el" user-emacs-directory)))
-			(when (and (file-exists-p epath)
-				  (not (file-exists-p upath)))
-			  (copy-file epath upath))
-			(find-file upath))))
-		   (,(all-the-icons-octicon "book" :height 1.1 :v-adjust 0.0)
-		    "Document"
-		    "Document Page"
-		    (lambda (&rest _) (browse-url "https://keke-cute.github.io/emacs.html"))))))))
-
+        :commands (dashboard-refresh-buffer
+                   dashboard-setup-startup-hook)
+        :init (straight-use-package 'dashboard))
+      
+      (leaf page-break-lines
+        :hook
+        (after-init-hook . global-page-break-lines-mode)
+        (nasy/font-change-hook
+         . (lambda ()
+             (progn
+               (nasy/change-char-width page-break-lines-char 2)
+               (nasy/set-symbol ?⊸ 18 nil))))
+        :custom
+        (page-break-lines-char . ?⊸))
+      
+      (defun nasy/-set-dashboard-init-info (&rest _)
+        (setq dashboard-init-info
+              (let ((package-count 0) (time (emacs-init-time)))
+                (setq package-count (+ (hash-table-size straight--profile-cache) package-count))
+                (if (zerop package-count)
+                    (format "Emacs started in %s" time)
+                  (format "%d packages loaded in %s" package-count time)))))
+      
+      
+      (defun nasy/-dashboard-items (_)
+        (insert "\n")
+        (widget-create 'item
+                       :tag "近期 (r)"
+                       :action #'consult-recent-file
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "🌓 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "open recent files")
+        (insert "\t")
+        (widget-create 'item
+                       :tag "書籤 (b)"
+                       :action #'consult-bookmark
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "🔖 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "open bookmarks")
+        (insert "\t")
+        (widget-create 'item
+                       :tag "項目 (p)"
+                       :action #'projectile-switch-project
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "🚀 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "open projects")
+        (insert "               \n\n")
+        (widget-create 'item
+                       :tag "草稿 (c)"
+                       :action #'persistent-scratch-restore
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "📝 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "restore scratch buffer")
+        (insert "\t")
+        (widget-create 'item
+                       :tag "議程 (a)"
+                       :action #'org-agenda
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "🗓 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "Org Agenda")
+        (insert "\t")
+        (widget-create 'item
+                       :tag "日曆 (d)"
+                       :action #'calendar
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "📅 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "open calendar")
+        (insert "               \n\n")
+        (widget-create 'item
+                       :tag "芄蘭 (C)"
+                       :action #'nasy/-open-custom
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "⚙ "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "open custom file")
+        (insert "\t")
+        (widget-create 'item
+                       :tag "源碼 (s)"
+                       :action #'nasy/-open-source-page
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "🍭 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "open https://github.com/nasyxx/emacs.d/")
+        (insert "\t")
+        (widget-create 'item
+                       :tag "文檔 (D)"
+                       :action #'nasy/-open-document
+                       :mouse-face 'highlight
+                       :button-face 'dashboard-heading
+                       :button-prefix "📖 "
+                       :button-suffix ""
+                       :format "%[%t%]"
+                       :help-echo "open https://emacs.nasy.moe")
+        (insert "               \n\n"))
+      
+      
+      (after-x 'dashboard
+        (defun nasy/dashboard-refresh ()
+          "Refresh dashboard buffer."
+          (interactive)
+          (unless (get-buffer dashboard-buffer-name)
+            (generate-new-buffer "*dashboard*"))
+          (dashboard-refresh-buffer)))
+      
+      (leaf dashboard
+        :leaf-autoload nil
+        :bind
+        ("<f5>" . dashboard-refresh-buffer)
+        (:dashboard-mode-map
+         ("r"              . consult-recent-file)
+         ("b"              . consult-bookmark)
+         ("p"              . projectile-switch-project)
+         ("c"              . persistent-scratch-restore)
+         ("a"              . org-agenda)
+         ("d"              . calendar)
+         ("C"              . nasy/-open-custom)
+         ("s"              . nasy/-open-source-page)
+         ("D"              . nasy/-open-document)
+         ("g"              . dashboard-refresh-buffer)
+         ("<down-mouse-1>" . nil)
+         ("H-p"            . dashboard-previous-line)
+         ("H-n"            . dashboard-next-line)
+         ("H-b"            . widget-backward)
+         ("H-f"            . widget-forward)
+         ("<mouse-1>"      . widget-button-click)
+         ("<mouse-2>"      . widget-button-click)
+         ("<up>"           . widget-backward)
+         ("<down>"         . nasy/wfw1))
+        :hook
+        ((dashboard-mode-hook . (lambda () (setq-local tab-width 1)))
+         (after-init-hook     . dashboard-setup-startup-hook)
+         (after-init-hook     . dashboard-refresh-buffer))
+        :custom
+        (dashboard-items . '((n-items . t)))
+                             ;; (bookmarks . t)))
+                             ;; (registers . 5)
+                             ;; (agenda    . 5)
+                             ;; (projects  . 7)))
+        (dashboard-item-generators . '((n-items . nasy/-dashboard-items)))
+        ((dashboard-center-content
+          dashboard-set-heading-icons
+          dashboard-set-init-info) . t)
+        `(dashboard-startup-banner       . ,(expand-file-name "n_icon.png" user-emacs-directory))
+        :advice (:before dashboard-refresh-buffer nasy/-set-dashboard-init-info))
+      
       (setq-default
        initial-scratch-message     (concat ";; Happy hacking, " user-login-name " - Emacs ♥ you!\n\n")
        dashboard-banner-logo-title (concat ";; Happy hacking, " user-login-name " - Emacs ♥ you!\n\n")
