--- a/readme.org
+++ b/readme.org
@@ -689,8 +689,14 @@
 
 ** Selectrum
 #+begin_src elisp
+  (leaf selectrum-prescient
+    :init (straight-use-package 'selectrum-prescient))
+  
   (leaf selectrum
-    :config (selectrum-mode +1)
+    :config
+    (selectrum-mode +1)
+    (selectrum-prescient-mode +1)
+    (prescient-persist-mode +1)
     :init (straight-use-package 'selectrum))
 #+end_src
 
